force-app/main/default/objects/tc9_et__PortalSpecificSettings__c/tc9_et__PortalSpecificSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A custom setting used to configure Client Sites and Employee Portals. Settings can be defined at an Org level and at an Entity level.</description>
    <label>Time2Pay Portal Specific Settings</label>
</CustomObject>