force-app/main/default/objects/tc9_et__PortalSpecificSettings__c/fields/tc9_et__Auto_Create_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Auto_Create_Portal_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if a Portal User will be automatically created when the first Timesheet is created for an Employee. If True, when the first Timesheet is created for an Employee, if they are not already a Portal User AND &quot;Does not use online Timesheet&quot; on the Assignment is FALSE, a Portal User record will automatically be created and login details sent to Employee. If FALSE, a User with appropriate profile access will need to manually create the Portal User records. This field works in conjunction with Portal Profile Name field. If the Portal Profile Name field is not populated with a valid profile, Portal User records will not be created.</description>
    <inlineHelpText>If True, when the first Timesheet is created for an Employee, if they are not already a Portal User AND &quot;Does not use online Timesheet&quot; on the Assignment is FALSE, a Portal User record will automatically be created and login details sent to Employee.</inlineHelpText>
    <label>Auto Create Portal User</label>
    <type>Checkbox</type>
</CustomField>