force-app/main/default/objects/tc9_et__PortalSpecificSettings__c/fields/tc9_et__Default__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies the record as the Portal Specific Setting that will be used when there is not an existing setting for the Entity.</description>
    <inlineHelpText>Identifies the record as the Portal Specific Setting that will be used when there is not an existing setting for the Entity.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>