force-app/main/default/objects/tc9_et__PortalSpecificSettings__c/fields/tc9_et__Enable_Community_User_from_Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Community_User_from_Payee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the community user should be created off the Payee</description>
    <inlineHelpText>Defines if the community user should be created off the Payee</inlineHelpText>
    <label>Enable Community User from Payee</label>
    <type>Checkbox</type>
</CustomField>