force-app/main/default/objects/tc9_et__PortalSpecificSettings__c/fields/tc9_et__Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Entity_Name__c</fullName>
    <description>Defines a user friendly name of the Entity that is identified in the Entity ID field. This is for User Information and Error Reporting only and not reflected in the Site.</description>
    <inlineHelpText>Defines a user friendly name of the Entity that is identified in the Entity ID field. This is for User Information and Error Reporting only and not reflected in the Site.</inlineHelpText>
    <label>Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>