force-app/main/default/objects/tc9_et__PortalSpecificSettings__c/fields/tc9_et__Invoice_Portal__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set to true this site will be used as the Invoicing site for viewing invoices online. When this checkbox is true the &apos;Default&apos; checkbox must be set to false to avoid issues when handling multiple sites.</description>
    <inlineHelpText>When set to true this site will be used as the Invoicing site for viewing invoices online. When this checkbox is true the &apos;Default&apos; checkbox must be set to false to avoid issues when handling multiple sites.</inlineHelpText>
    <label>Invoice Portal</label>
    <type>Checkbox</type>
</CustomField>