force-app/main/default/objects/tc9_et__PortalSpecificSettings__c/fields/tc9_et__Portal_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Portal_Profile_Name__c</fullName>
    <description>Identifies the default portal profile name that will be used in automatically creating Portal User records when the Auto Create Portal User field is TRUE. The profile entered will be used to populate the Profile field on the User record</description>
    <inlineHelpText>Identifies the default portal profile name that will be used in automatically creating Portal User records when the Auto Create Portal User field is TRUE. The profile entered will be used to populate the Profile field on the User record</inlineHelpText>
    <label>Portal Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>