force-app/main/default/objects/tc9_et__PortalSpecificSettings__c/fields/tc9_et__Site_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Site_ID__c</fullName>
    <description>Defines the Record ID of the Site that the Portal Specific Setting applies.</description>
    <inlineHelpText>Defines the Record ID of the Site that the Portal Specific Setting applies.</inlineHelpText>
    <label>Site ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>