force-app/main/default/objects/tc9_et__PortalSpecificSettings__c/fields/tc9_et__Site_URL__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Site_URL__c</fullName>
    <description>To specify the site URL that has to be used for creation of Link Token</description>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>